--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -20,6 +20,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100px;
+    display: none;
 }
 
 .logo {
@@ -75,12 +76,13 @@ textarea {
     position: relative;
     width: 15px;
     height: 15px;
+    border-radius: 2px;
     background: #fff;
     border: 1px solid #383838;
     cursor: pointer;
 }
 
-.checkbox::checked {
+.checkbox:checked {
     background: #383838;
 }
 
@@ -120,4 +122,44 @@ label a {
     text-transform: capitalize;
     text-align: center;
     display: block;
+}
+
+
+/* alert */
+
+.alert-box {
+    width: 300px;
+    min-height: 150px;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 5px 100px rgba(0, 0, 0, 0.05);
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    opacity: 0;
+    pointer-events: none;
+    transition: 1s;
+}
+
+.alert-box.show {
+    opacity: 1;
+    pointer-events: all;
+    top: 50%;
+}
+
+.alert-img {
+    display: block;
+    margin: 10px auto 20px;
+    height: 60px;
+}
+
+.alert-msg {
+    color: #e24c4b;
+    font-size: 20px;
+    text-transform: capitalize;
+    text-align: center;
+    line-height: 30px;
+    font-weight: 500;
 }
